# tree_magic_mini

./: Cargo.toml  README.md
src/: lib.rs
src/basetype/: check.rs  mod.rs
src/fdo_magic/: check.rs  ruleset.rs
src/fdo_magic/builtin/: aliases  check.rs  init.rs  magic  mod.rs  subclasses
